--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -3,11 +3,9 @@
   margin-top: 1rem;
   gap: 1rem;
 }
-.comment > img {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 8px;
 
+.comment + .comment {
+  margin-top: 2rem;
 }
 .commentBox {
   flex: 1;
