--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -97,7 +97,13 @@
 .form button[type='submit']:hover {
   background: var(--green-300);
 }
-
+.form button[type='submit']:disabled:hover {
+  background: var(--green-500);
+}
+.form button[type='submit']:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
 .commentList {
   margin-top: 2rem;
 }
